--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "@reduxjs/toolkit": "^2.2.8",
     "next": "14.2.15",
+    "next-redux-wrapper": "^8.1.0",
     "prisma": "^5.20.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
