--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "@reduxjs/toolkit": "^2.2.8",
+    "axios": "^1.7.7",
     "next": "14.2.15",
     "next-redux-wrapper": "^8.1.0",
     "prisma": "^5.20.0",
