--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@prisma/client": "^5.20.0",
     "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "next": "14.2.15",
     "next-redux-wrapper": "^8.1.0",
     "prisma": "^5.20.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
