--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.20.0",
     "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "formik": "^2.4.6",
     "next": "14.2.15",
     "next-redux-wrapper": "^8.1.0",
@@ -23,6 +24,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -30,6 +32,6 @@
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
