--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.15",
     "next-redux-wrapper": "^8.1.0",
     "prisma": "^5.20.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
